Conf: Add misc { pad = x }.

--- a/wmfsrc.in
+++ b/wmfsrc.in
@@ -13,6 +13,7 @@ misc
         font        = "dejavu-10"
         raisefocus  = false
         raiseswitch = true
+        pad         = 12
 }
 
 bar
