CMake: New version system: YearMonth (YYYYmm)-revision.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,8 +46,9 @@ set(wmfs_src
 # Set the executable from the wmfs_src
 add_executable(wmfs ${wmfs_src})
 
-# Set the version - NOT USED AT THE MOMENT
-set(VERSION "0.1rc4 (On The Run)")
+# Set the version - Get YEAR and MONTH (YYYYmm)
+EXEC_PROGRAM("date '+%Y%m'" OUTPUT_VARIABLE YEAR_MONTH)
+set(VERSION "WMFS-${YEAR_MONTH}")
 
 # FLAGS
 set(CFLAGS "-g -Wall -ansi")
@@ -101,6 +102,7 @@ pkg_check_modules(wmfs_required
   libconfuse
   freetype2
   xinerama
+  xrandr
   xft)
 
 # Generating man page
