--- a/src/config.h.in
+++ b/src/config.h.in
@@ -41,5 +41,7 @@
 #define WMFS_COMPILE_FLAGS      "@WMFS_COMPILE_FLAGS@"
 #define WMFS_LINKED_LIBS        "@WMFS_LINKED_LIBS@"
 #define XDG_CONFIG_DIR          "@XDG_CONFIG_DIR@"
+@WMFS_HAVE_XINERAMA@
+@WMFS_HAVE_XRANDR@
 
 #endif /* CONFIG_H */
