Confparse: Improve stuff and add wmfsrc_new, the next wmfs configuration file.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,9 +24,13 @@ project(${PROJECT_NAME} C)
 
 # Definition of the wmfs source
 set(wmfs_src
+  src/confparse/util.c
+  src/confparse/confparse.c
   src/barwin.c
   src/client.c
+#  src/config_new.c
   src/config.c
+  src/
   src/draw.c
   src/event.c
   src/ewmh.c
