--- a/wmfsrc.in
+++ b/wmfsrc.in
@@ -3,29 +3,19 @@
 # ~/.config/wmfs/wmfsrc and edit it.
 #
 
-alias
-{
-        alias term { content = "@WMFS_TERM@" }
-}
-
-misc
-{
-        font                = "dejavu-10"
+[misc]
+        font               = "dejavu-10"
         raisefocus         = false
-        raiseswitch        = true
         focus_follow_mouse = true
-        pad         = 12
-}
+[/misc]
 
-bar
-{
-        bg       = "#191919"
-        fg       = "#D4D4D4"
-        border   = true
-}
+[bar]
+        bg     = "#191919"
+        fg     = "#D4D4D4"
+        border = true
+[/bar]
 
-layouts
-{
+[layouts]
         fg = "#191919"
         bg = "#7E89A2"
 
@@ -36,94 +26,99 @@ layouts
         system = "menu"
 
         # Tiling layouts.
-        layout { type = "tile_right"        symbol = "RIGHT" }
-        layout { type = "tile_left"         symbol = "LEFT" }
-        layout { type = "tile_top"          symbol = "TOP" }
-        layout { type = "tile_bottom"       symbol = "BOTTOM" }
-        layout { type = "tile_grid"         symbol = "GRID" }
-        layout { type = "mirror_vertical"   symbol = "MIRROR_V" }
-        layout { type = "mirror_horizontal" symbol = "MIRROR_H" }
+        [layout] type = "tile_right"        symbol = "RIGHT"    [/layout]
+        [layout] type = "tile_left"         symbol = "LEFT"     [/layout]
+        [layout] type = "tile_top"          symbol = "TOP"      [/layout]
+        [layout] type = "tile_bottom"       symbol = "BOTTOM"   [/layout]
+        [layout] type = "tile_grid"         symbol = "GRID"     [/layout]
+        [layout] type = "mirror_vertical"   symbol = "MIRROR_V" [/layout]
+        [layout] type = "mirror_horizontal" symbol = "MIRROR_H" [/layout]
 
-        # Other.
-        layout { type = "max"         symbol = "MAX"  }
-        layout { type = "free"        symbol = "FREE" }
-}
+        # Other layouts.
+        [layout] type = "max"   symbol = "MAX"  [/layout]
+        [layout] type = "free"  symbol = "FREE" [/layout]
 
-tags
-{
-        tag_round    = false
-        occupied_bg  = "#003366"
-        sel_fg       = "#191919"
-        sel_bg       = "#7E89A2"
+[/layouts]
+
+[tags]
+        tag_round   = false
+        occupied_bg = "#003366"
+        sel_fg      = "#191919"
+        sel_bg      = "#7E89A2"
 
         # Border around the tag buttons.
-        border       = true
+        border      = true
 
-        tag { screen = 1 name = "one" mwfact = 0.65 nmaster = 1 layout = "tile_right" resizehint = false infobar_position = "top" }
-        tag { name = "two"   }
-        tag { name = "three" }
-        tag { name = "four"  }
-        tag { name = "five"  }
-        tag { name = "six"   }
-        tag { name = "seven" }
-        tag { name = "eight" }
-        tag { name = "nine"  }
-}
+        [tag]
+                name             = "one"
+                screen           = 0
+                mwfact           = 0.65
+                nmaster          = 1
+                layout           = "tile_right"
+                resizehint       = false
+                infobar_position = "top"
+        [/tag]
 
-root
-{
-        # Command you can execute to set the background.
+        [tag] name = "two"  clients = {"Browser"} [/tag]
+        [tag] name = "three" [/tag]
+        [tag] name = "four"  [/tag]
+        [tag] name = "five"  [/tag]
+        [tag] name = "six"   [/tag]
+        [tag] name = "seven" [/tag]
+        [tag] name = "eight" [/tag]
+        [tag] name = "nine"  [/tag]
+[/tags]
+
+[root]
+       # Command you can execute to set the background.
         background_command = "xsetroot -solid black"
 
-        mouse { button = "4" func = "tag_next" }
-        mouse { button = "5" func = "tag_prev" }
-        mouse { button = "3" func = "menu" cmd = "rootmenu" }
-}
+        [mouse] button = "4" func = "tag_next"              [/mouse]
+        [mouse] button = "5" func = "tag_prev"              [/mouse]
+        [mouse] button = "3" func = "menu" cmd = "rootmenu" [/mouse]
+[/root]
 
-client
-{
-        border_height         = 3
-        border_shadow         = true
-        border_normal         = "#191919"
-        border_focus          = "#003366"
-        resize_corner_normal  = "#191919"
-        resize_corner_focus   = "#003366"
+[client]
+        border_height        = 3
+        border_shadow        = true
+        border_normal        = "#191919"
+        border_focus         = "#003366"
+        resize_corner_normal = "#191919"
+        resize_corner_focus  = "#003366"
 
-        modifier              = "Alt"
-        mouse { button = "1" func = "client_raise" }
-        mouse { button = "1" func = "mouse_move" }
-        mouse { button = "3" func = "client_raise" }
-        mouse { button = "3" func = "mouse_resize" }
+        modifier = "Alt"
+
+        [mouse] button = "1" func = "client_raise" [/mouse]
+        [mouse] button = "1" func = "mouse_move"   [/mouse]
+        [mouse] button = "3" func = "client_raise" [/mouse]
+        [mouse] button = "3" func = "mouse_resize" [/mouse]
 
         # Remove this section to delete the titlebar.
-        titlebar
-        {
-                stipple    = false
-                height     = 12
-                fg_normal  = "#7E89A2"
-                fg_focus   = "#9F9AB3"
+        [titlebar]
+                stipple   = false
+                height    = 12
+                fg_normal = "#7E89A2"
+                fg_focus  = "#9F9AB3"
 
-                mouse { button = "1" func = "client_raise" }
-                mouse { button = "1" func = "mouse_move" }
-                mouse { button = "3" func = "client_raise" }
-                mouse { button = "3" func = "mouse_resize" }
+                [mouse] button = "1" func = "client_raise" [/mouse]
+                [mouse] button = "1" func = "mouse_move"   [/mouse]
+                [mouse] button = "3" func = "client_raise" [/mouse]
+                [mouse] button = "3" func = "mouse_resize" [/mouse]
 
-                button
-                {
-                        mouse { button = "1" func = "client_kill" }
-                        mouse { button = "3" func = "menu" cmd = "clientmenu" }
-                        line { coord = {1, 1, 4, 1} }
-                        line { coord = {1, 1, 1, 4} }
-                        line { coord = {1, 4, 4, 4} }
-                }
-        }
-}
+                [button]
+                        [mouse] button = "1" func = "client_kill"             [/mouse]
+                        [mouse] button = "3" func = "menu" cmd = "clientmenu" [/mouse]
 
-menu
-{
-        # Default menu, binded on the root window.
-        set_menu
-        {
+                        [line] coord = {1, 1, 4, 1} [/line]
+                        [line] coord = {1, 1, 1, 4} [/line]
+                        [line] coord = {1, 4, 4, 4} [/line]
+                [/button]
+        [/titlebar]
+[/client]
+
+[menu]
+        # Default menu, binded on the root window, button 3.
+        [set_menu]
                 name = "rootmenu"
 
                 # place_at_mouse = false
@@ -132,129 +127,127 @@ menu
                 fg_focus  = "#191919" bg_focus  = "#7E89A2"
                 fg_normal = "#9F9AB3" bg_normal = "#191919"
 
-                item { name = "Terminal"        func = "spawn" cmd = term }
-                item { name = "Next tag"        func = "tag_next" }
-                item { name = "Previous tag"    func = "tag_prev" }
-                item { name = "Next layout"     func = "layout_next" }
-                item { name = "Previous layout" func = "layout_prev" }
-                item { name = "Toggle infobar"  func = "toggle_infobar_position" }
-                item { name = "Quit WMFS"       func = "quit" }
-        }
+                [item] name = "Terminal"        func = "spawn" cmd = "@WMFS_TERM@" [/item]
+                [item] name = "Next tag"        func = "tag_next"                  [/item]
+                [item] name = "Previous tag"    func = "tag_prev"                  [/item]
+                [item] name = "Next layout"     func = "layout_next"               [/item]
+                [item] name = "Previous layout" func = "layout_prev"               [/item]
+                [item] name = "Toggle infobar"  func = "toggle_infobar_position"   [/item]
+                [item] name = "Quit WMFS"       func = "quit"                      [/item]
+        [/set_menu]
 
-        set_menu
-        {
+        [set_menu]
                 name = "clientmenu"
 
                 fg_focus  = "#D4D4D4" bg_focus  = "#003366"
                 fg_normal = "#D4D4D4" bg_normal = "#191919"
 
-                item { name = "Close"    func = "client_kill" }
-                item { name = "Maximize" func = "toggle_max" }
-                item { name = "Free"     func = "toggle_free" }
-        }
-}
+                [item] name = "Close"    func = "client_kill" [/item]
+                [item] name = "Maximize" func = "toggle_max"  [/item]
+                [item] name = "Free"     func = "toggle_free" [/item]
+        [/set_menu]
+[/menu]
 
-launcher
-{
-        set_launcher
-        {
+[launcher]
+        [set_launcher]
                 name = "launcher_exec"
                 prompt = "Exec: "
                 command = "exec"
-        }
-        set_launcher
-        {
+        [/set_launcher]
+
+        [set_launcher]
                 name = "launcher_ssh"
                 prompt = "ssh to: "
                 command = "@WMFS_TERM@ -e ssh"
-        }
-}
+        [/set_launcher]
+[/launcher]
 
-keys
-{
-        # Reload the configuration of wmfs.
-        key { mod = {"Alt", "Control"} key = "r" func = "reload" }
+[keys]
+         # Reload the configuration of wmfs.
+        [key] mod = {"Alt", "Control"} key = "r" func = "reload" [/key]
 
         # Open a terminal.
-        key { mod = {"Control"} key = "Return" func = "spawn" cmd = term }
+        [key] mod = {"Control"} key = "Return" func = "spawn" cmd = "@WMFS_TERM@" [/key]
 
         # Kill the selected client.
-        key { mod = {"Alt"} key = "q" func = "client_kill" }
+        [key] mod = {"Alt"} key = "q" func = "client_kill" [/key]
 
         # Quit wmfs.
-        key { mod = {"Control", "Alt", "Shift"} key = "q" func = "quit" }
+        [key] mod = {"Control", "Alt", "Shift"} key = "q" func = "quit" [/key]
 
         # Swap current client with the next.
-        key { mod = {"Alt"} key = "t" func = "client_swap_next" }
+        [key] mod = {"Alt"} key = "t" func = "client_swap_next" [/key]
 
         # Swap current client with the previous.
-        key { mod = {"Alt", "Shift"} key = "t" func = "client_swap_prev" }
+        [key] mod = {"Alt", "Shift"} key = "t" func = "client_swap_prev" [/key]
 
-        # Toggle maximum the selected client.
-        key { mod = {"Alt"} key = "m" func = "toggle_max" }
+        # Toggle maximum the selected client
+        [key] mod = {"Alt"} key = "m" func = "toggle_max" [/key]
 
         # Toggle free the selected client.
-        key { mod = {"Alt"} key = "f" func = "toggle_free" }
+        [key] mod = {"Alt"} key = "f" func = "toggle_free" [/key]
 
         # Toggle the position of the infobar.
-        key { mod = {"Alt"} key = "b" func = "toggle_infobar_position" }
+        [key] mod = {"Alt"} key = "b" func = "toggle_infobar_position" [/key]
 
         # Toggle the resizehint of the current tag/screen
-        key { mod = { "Shift", "Control" } key = "r" func = "toggle_resizehint" }
+        [key] mod = {"Shift", "Control"} key = "r" func = "toggle_resizehint" [/key]
 
         # Select the next client.
-        key { mod = {"Alt"} key = "Tab" func = "client_next" }
+        [key] mod = {"Alt"} key = "Tab" func = "client_next" [/key]
 
         # Select the previous client.
-        key { mod = {"Alt","Shift"} key = "Tab" func = "client_prev" }
+        [key] mod = {"Alt","Shift"} key = "Tab" func = "client_prev" [/key]
 
         # Select the next tag.
-        key { mod = {"Control"} key = "Right" func = "tag_next" }
+        [key] mod = {"Control"} key = "Right" func = "tag_next" [/key]
 
         # Select the previous tag.
-        key { mod = {"Control"} key = "Left" func = "tag_prev" }
+        [key] mod = {"Control"} key = "Left" func = "tag_prev" [/key]
 
         # Set the next layout.
-        key { mod = {"Alt"} key = "space" func = "layout_next" }
+        [key] mod = {"Alt"} key = "space" func = "layout_next" [/key]
 
         # Set the previous layout.
-        key { mod = {"Alt", "Shift"} key = "space" func = "layout_prev" }
+        [key] mod = {"Alt", "Shift"} key = "space" func = "layout_prev" [/key]
 
         # Increase mwfact.
-        key { mod = {"Alt", "Shift"} key = "l" func = "set_mwfact" cmd = "+0.025" }
+        [key] mod = {"Alt"} key = "l" func = "set_mwfact" cmd = "+0.025" [/key]
 
         # Decrease mwfact.
-        key { mod = {"Alt", "Shift"} key = "h" func = "set_mwfact" cmd = "-0.025" }
+        [key] mod = {"Alt"} key = "h" func = "set_mwfact" cmd = "-0.025" [/key]
 
         # Increase nmaster.
-        key { mod = {"Alt"} key = "d" func = "set_nmaster" cmd = "+1" }
+        [key] mod = {"Alt"} key = "d" func = "set_nmaster" cmd = "+1" [/key]
 
         # Decease nmaster.
-        key { mod = {"Alt", "Shift"} key = "d" func = "set_nmaster" cmd = "-1" }
+        [key] mod = {"Alt", "Shift"} key = "d" func = "set_nmaster" cmd = "-1" [/key]
 
-        # Launchers.
-        key { mod = { "Alt" } key = "p" func = "launcher" cmd = "launcher_exec" }
-        key { mod = { "Alt", "Shift" } key = "p" func = "launcher" cmd = "launcher_ssh" }
+        #Launchers.
+        [key] mod = {"Alt"} key = "p" func = "launcher" cmd = "launcher_exec" [/key]
+        [key] mod = {"Alt", "Shift"} key = "p" func = "launcher" cmd = "launcher_ssh" [/key]
 
         # Set the tag x.
-        key { mod = {"Alt"} key = "F1" func = "tag" cmd = "1" }
-        key { mod = {"Alt"} key = "F2" func = "tag" cmd = "2" }
-        key { mod = {"Alt"} key = "F3" func = "tag" cmd = "3" }
-        key { mod = {"Alt"} key = "F4" func = "tag" cmd = "4" }
-        key { mod = {"Alt"} key = "F5" func = "tag" cmd = "5" }
-        key { mod = {"Alt"} key = "F6" func = "tag" cmd = "6" }
-        key { mod = {"Alt"} key = "F7" func = "tag" cmd = "7" }
-        key { mod = {"Alt"} key = "F8" func = "tag" cmd = "8" }
-        key { mod = {"Alt"} key = "F9" func = "tag" cmd = "9" }
+        [key] mod = {"Alt"} key = "F1" func = "tag" cmd = "1" [/key]
+        [key] mod = {"Alt"} key = "F2" func = "tag" cmd = "2" [/key]
+        [key] mod = {"Alt"} key = "F3" func = "tag" cmd = "3" [/key]
+        [key] mod = {"Alt"} key = "F4" func = "tag" cmd = "4" [/key]
+        [key] mod = {"Alt"} key = "F5" func = "tag" cmd = "5" [/key]
+        [key] mod = {"Alt"} key = "F6" func = "tag" cmd = "6" [/key]
+        [key] mod = {"Alt"} key = "F7" func = "tag" cmd = "7" [/key]
+        [key] mod = {"Alt"} key = "F8" func = "tag" cmd = "8" [/key]
+        [key] mod = {"Alt"} key = "F9" func = "tag" cmd = "9" [/key]
 
         # Transfert selected client to x.
-        key { mod = {"Alt", "Shift"} key = "F1" func = "tag_transfert" cmd ="1" }
-        key { mod = {"Alt", "Shift"} key = "F2" func = "tag_transfert" cmd ="2" }
-        key { mod = {"Alt", "Shift"} key = "F3" func = "tag_transfert" cmd ="3" }
-        key { mod = {"Alt", "Shift"} key = "F4" func = "tag_transfert" cmd ="4" }
-        key { mod = {"Alt", "Shift"} key = "F5" func = "tag_transfert" cmd ="5" }
-        key { mod = {"Alt", "Shift"} key = "F6" func = "tag_transfert" cmd ="6" }
-        key { mod = {"Alt", "Shift"} key = "F7" func = "tag_transfert" cmd ="7" }
-        key { mod = {"Alt", "Shift"} key = "F8" func = "tag_transfert" cmd ="8" }
-        key { mod = {"Alt", "Shift"} key = "F9" func = "tag_transfert" cmd ="9" }
-}
+        [key] mod = {"Alt", "Shift"} key = "F1" func = "tag_transfert" cmd ="1" [/key]
+        [key] mod = {"Alt", "Shift"} key = "F2" func = "tag_transfert" cmd ="2" [/key]
+        [key] mod = {"Alt", "Shift"} key = "F3" func = "tag_transfert" cmd ="3" [/key]
+        [key] mod = {"Alt", "Shift"} key = "F4" func = "tag_transfert" cmd ="4" [/key]
+        [key] mod = {"Alt", "Shift"} key = "F5" func = "tag_transfert" cmd ="5" [/key]
+        [key] mod = {"Alt", "Shift"} key = "F6" func = "tag_transfert" cmd ="6" [/key]
+        [key] mod = {"Alt", "Shift"} key = "F7" func = "tag_transfert" cmd ="7" [/key]
+        [key] mod = {"Alt", "Shift"} key = "F8" func = "tag_transfert" cmd ="8" [/key]
+        [key] mod = {"Alt", "Shift"} key = "F9" func = "tag_transfert" cmd ="9" [/key]
+[/keys]
+
+
