Infobar: Add option to move layout button before of after tags list (Feature #20 requested by Erus.)

--- a/wmfsrc.in
+++ b/wmfsrc.in
@@ -26,6 +26,9 @@
         # Value menu or switch.
         system = "menu"
 
+        # Value left or right.
+        placement = "right"
+
         # Tiling layouts.
         [layout] type = "tile_right"        symbol = "RIGHT"    [/layout]
         [layout] type = "tile_left"         symbol = "LEFT"     [/layout]
