--- a/wmfsrc.in
+++ b/wmfsrc.in
@@ -25,6 +25,9 @@
                 bg = "#191919"
                 fg = "#D4D4ff"
 
+                # Cut title lenght
+                # max_lenght = 25
+
                 [mouse] button = "3" func = "clientlist"  [/mouse]
                 [mouse] button = "4" func = "client_next" [/mouse]
                 [mouse] button = "5" func = "client_prev" [/mouse]
