wmfs.desktop: Fix bug with Gdm? (Bug #48 signaled by add1ktive, fixed by arpinux)

--- a/wmfs.desktop
+++ b/wmfs.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry] 
-Encoding=UTF-8
-Name=wmfs
-Comment=Window manager from scratch
-TryExec=wmfs
-Exec=wmfs
+Encoding="UTF-8"
+Name="wmfs"
+Comment="Window Manager From Scratch"
+TryExec="wmfs"
+Exec="ck-launch-session wmfs"
