--- a/wmfs.desktop
+++ b/wmfs.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
-Encoding="UTF-8"
-Name="wmfs"
-Comment="Window Manager From Scratch"
-Exec="ck-launch-session wmfs"
+Encoding=UTF-8
+Name=wmfs
+Comment=Window Manager From Scratch
+Exec=ck-launch-session wmfs
