--- a/wmfsrc.in
+++ b/wmfsrc.in
@@ -48,6 +48,9 @@
         # Value left or right.
         placement = "right"
 
+        # Keep layout geo for free layout
+        keep_layout_geo = false
+
         # Tiling layouts.
         [layout] type = "tile_right"        symbol = "RIGHT"    [/layout]
         [layout] type = "tile_left"         symbol = "LEFT"     [/layout]
