Add a default name option (default_name) to change "new tag" when you add a tag by a keybind. Add an option (name_count) to put the number of the tag as a default name.

--- a/wmfsrc.in
+++ b/wmfsrc.in
@@ -73,6 +73,9 @@
         sel_bg      = "#7E89A2"
         urgent_bg   = "#DD1111"
         urgent_fg   = "#000000"
+        # If true, number of the tag will be used for name
+        name_count  = false
+        default_name= "new tag" # default name for a new tag
 
         # Border around the tag buttons.
         border      = true
