--- a/wmfsrc.in
+++ b/wmfsrc.in
@@ -52,13 +52,14 @@
         keep_layout_geo = false
 
         # Tiling layouts.
-        [layout] type = "tile_right"        symbol = "RIGHT"    [/layout]
-        [layout] type = "tile_left"         symbol = "LEFT"     [/layout]
-        [layout] type = "tile_top"          symbol = "TOP"      [/layout]
-        [layout] type = "tile_bottom"       symbol = "BOTTOM"   [/layout]
-        [layout] type = "tile_grid"         symbol = "GRID"     [/layout]
-        [layout] type = "mirror_vertical"   symbol = "MIRROR_V" [/layout]
-        [layout] type = "mirror_horizontal" symbol = "MIRROR_H" [/layout]
+        [layout] type = "tile_right"         symbol = "RIGHT"    [/layout]
+        [layout] type = "tile_left"          symbol = "LEFT"     [/layout]
+        [layout] type = "tile_top"           symbol = "TOP"      [/layout]
+        [layout] type = "tile_bottom"        symbol = "BOTTOM"   [/layout]
+        [layout] type = "tile_grid"          symbol = "GRID_H"   [/layout]
+        [layout] type = "tile_grid_vertical" symbol = "GRID_V"   [/layout]
+        [layout] type = "mirror_vertical"    symbol = "MIRROR_V" [/layout]
+        [layout] type = "mirror_horizontal"  symbol = "MIRROR_H" [/layout]
 
         # Other layouts.
         [layout] type = "max"   symbol = "MAX"  [/layout]
