Add default_tag section in the tags section of the wmfsrc. It allows user to set all options of a new tag when they will use add a tag dynamically. Feature #73 requested by bacardi55

--- a/wmfsrc.in
+++ b/wmfsrc.in
@@ -68,6 +68,15 @@
 [/layouts]
 
 [tags]
+        [default_tag]
+             name             = "new tag"
+             mwfact           = 0.5
+             nmaster          = 1
+             layout           = "tile_right"
+             resizehint       = false
+             infobar_position = "top"
+        [/default_tag]
+
         tag_round      = false
         occupied_bg    = "#003366"
         sel_fg         = "#191919"
@@ -76,8 +85,8 @@
         urgent_fg      = "#000000"
         # If true, number of the tag will be used for name
         name_count     = false
-        default_name   = "new tag" # default name for a new tag
-        default_layout = "tile_right"
+        #default_name   = "new tag" # deprecated, use [default_tag] instead
+        #default_layout = "tile_right" # deprecated, use [default_tag] instead
 
         # Border around the tag buttons.
         border      = true
