Add an option (selected_layout_symbol) in the wmfsrc -> [layouts] to change the star (*) that is used as default symbol for the selected symbol in the layout list in the infobar

--- a/wmfsrc.in
+++ b/wmfsrc.in
@@ -51,6 +51,9 @@
         # Keep layout geo for free layout
         keep_layout_geo = false
 
+        # Symbol displayed for the selected layout in the list
+        selected_layout_symbol = "*"
+
         # Tiling layouts.
         [layout] type = "tile_right"         symbol = "RIGHT"    [/layout]
         [layout] type = "tile_left"          symbol = "LEFT"     [/layout]
